# python_image_grayscaling

./: README.md  main.py  pyproject.toml
